Shell: Add Router and Redux Store

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <!-- Static navbar -->
     <link rel="stylesheet" href="http://localhost:8233/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <div id='navbar'>
+    <div id='root'>
     </div>
   </body>
 </html>
